top nav collapses when option is selected, added image modal for what we do section, misc. bug fixes

--- a/css/nav.css
+++ b/css/nav.css
@@ -27,4 +27,5 @@ ul.navbar-nav {
 button.navbar-toggler {
     color: black;
 	margin: 14px 0;
+	cursor: pointer;
 }
